CXBOX-355 Pagination mode